# 0716_For_hiwim

./: MANUAL.md  README.md
dual_arm_alm_cg_planner_1/: CMakeLists.txt  MANUAL.md  PARAMETERS.md  README.md  dual_arm_alm_cg_planner_1.xml  package.xml
dual_arm_alm_cg_planner_1/config/: dual_arm_alm_cg_planner_1.yaml
dual_arm_alm_cg_planner_1/src/: avoidance_system.cpp  cg_solver.cpp  data_io.cpp  planner_manager.cpp
dual_arm_alm_cg_planner_1/standalone/: run_standalone.cpp
dual_arm_alm_gd_planner_1/: CMakeLists.txt  MANUAL.md  PARAMETERS.md  README.md  dual_arm_alm_gd_planner_1.xml  package.xml
dual_arm_alm_gd_planner_1 (4)/dual_arm_alm_gd_planner_1/: CMakeLists.txt  PARAMETERS.md  README.md
dual_arm_alm_gd_planner_1/config/: dual_arm_alm_gd_planner_1.yaml
dual_arm_alm_gd_planner_1/include/dual_arm_alm_gd_planner_1/: avoidance_system.hpp  gd_solver.hpp  planner_manager.hpp
dual_arm_alm_gd_planner_1/src/: avoidance_system.cpp  gd_solver.cpp  planner_manager.cpp
dual_arm_alm_gd_planner_1/standalone/: run_standalone.cpp
dual_arm_alm_newton_planner_1/: CMakeLists.txt  MANUAL.md  PARAMETERS.md  README.md  dual_arm_alm_newton_planner_1.xml  package.xml
dual_arm_alm_newton_planner_1/config/: dual_arm_alm_newton_planner_1.yaml
dual_arm_alm_newton_planner_1/include/dual_arm_alm_newton_planner_1/: avoidance_system.hpp  data_io.hpp  newton_solver.hpp  planner_manager.hpp
dual_arm_alm_newton_planner_1/src/: avoidance_system.cpp  data_io.cpp  newton_solver.cpp  planner_manager.cpp
dual_arm_alm_newton_planner_1/standalone/: run_standalone.cpp
dual_arm_lag_cg_planner_1/: CMakeLists.txt  MANUAL.md  PARAMETERS.md  README.md  dual_arm_lag_cg_planner_1.xml  package.xml
dual_arm_lag_cg_planner_1/config/: dual_arm_lag_cg_planner_1.yaml
dual_arm_lag_cg_planner_1/src/: avoidance_system.cpp  cg_solver.cpp  data_io.cpp  planner_manager.cpp
dual_arm_lag_cg_planner_1/standalone/: run_standalone.cpp
dual_arm_lag_gd_planner_1/: CMakeLists.txt  MANUAL.md  PARAMETERS.md  README.md  dual_arm_lag_gd_planner_1.xml  package.xml
dual_arm_lag_gd_planner_1/config/: dual_arm_lag_gd_planner_1.yaml
dual_arm_lag_gd_planner_1/src/: avoidance_system.cpp  data_io.cpp  gd_solver.cpp  planner_manager.cpp
dual_arm_lag_gd_planner_1/standalone/: run_standalone.cpp
dual_arm_lag_newton_planner_1/: CMakeLists.txt  MANUAL.md  PARAMETERS.md  README.md  dual_arm_lag_newton_planner_1.xml  package.xml
dual_arm_lag_newton_planner_1/config/: dual_arm_lag_newton_planner_1.yaml
dual_arm_lag_newton_planner_1/src/: avoidance_system.cpp  data_io.cpp  newton_solver.cpp  planner_manager.cpp
dual_arm_lag_newton_planner_1/standalone/: run_standalone.cpp
hiwin_dual_arm/: .setup_assistant  CMakeLists.txt  README.md  package.xml
hiwin_dual_arm/config/: dual_arm_alm_cg_1_planning.yaml  dual_arm_alm_gd_1_planning.yaml  dual_arm_alm_newton_1_planning.yaml  dual_arm_lag_cg_1_planning.yaml  dual_arm_lag_gd_1_planning.yaml  dual_arm_lag_newton_1_planning.yaml  dual_hiwin.ros2_control.xacro  dual_hiwin.srdf  dual_hiwin.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers .yaml.txt  moveit_controllers.yaml  moveit_controllers_copy.yaml  ompl_planning.yaml  ros2_controllers_copy.yaml
hiwin_dual_arm/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  test1.launch.py  (+3 more)
(+26 files in other folders)
