<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dual_arm_alm_gd_planner_1</name>
  <version>0.1.0</version>
  <description>Dual-arm collision avoidance MoveIt2 planner (ALM + GD inner solver)</description>
  <maintainer email="you@ntust.edu.tw">NTUST</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <moveit_core plugin="${prefix}/dual_arm_alm_gd_planner_1.xml" />
  </export>
</package>
